--- a/mindfinder/templates/mindfinder/top_bar.html
+++ b/mindfinder/templates/mindfinder/top_bar.html
@@ -3,6 +3,8 @@
     <head>
       <title>FindMind</title>
       <link rel="stylesheet" href="{% static 'mindfinder/style.css' %}">
+      {% block headers %}
+      {% endblock %}
     </head>
     <body>
         <div class="head">
@@ -10,7 +12,7 @@
                 <div class="otstup-menu">
                     <a href="{% url 'chat_service:chats' %}" class="btnfulled">Мессенджер</a>
                     <a href="{% url 'user_service:profile' %}" class="btnfulled">Профиль</a>
-                    <a class="btnfulled">Тест</a>
+                    <a href="{% url 'polls_service:tests' %}" class="btnfulled">Тест</a>
                     <a href="{% url 'chat_service:new' %}" class="btnfulled">Рекомендации</a>
                     <a href="{% url 'user_service:logout' %}" class="btnfulled">Выход</a>
                 </div>
