--- a/chat_service/templates/chat_service/chat_api.html
+++ b/chat_service/templates/chat_service/chat_api.html
@@ -1,14 +1,20 @@
 
     {% for message in messages %}
-        {% if message.owner.id != user.id %}
+{% if message.owner.id != user.id %}
         <div class="contleft">
-        {% else %}
-        <div class="contright">
-        {% endif %}
-            <img class="avatar" src="{{ message.owner.avatar.url }}" alt="Avatar">
-            <div class="text-left">
+        <img class="avatar" src="{{ message.owner.avatar.url }}" alt="Avatar">
+            <div>
                 <p>{{ message.message }}</p>
-                <span class="time-right">{{ message.datetime }}</span>
+                <span class="time-right smallfont">{{ message.datetime }}</span>
             </div>
         </div>
+        {% else %}
+        <div class="contright">
+        <img class="avatar" src="{{ message.owner.avatar.url }}" alt="Avatar">
+            <div>
+                <p>{{ message.message }}</p>
+                <span class="time-right smallfont">{{ message.datetime }}</span>
+            </div>
+        </div>
+        {% endif %}
     {% endfor %}
