--- a/chat_service/templates/chat_service/chat.html
+++ b/chat_service/templates/chat_service/chat.html
@@ -29,28 +29,36 @@ setInterval(test, 1000);
     {% for message in messages %}
         {% if message.owner.id != user.id %}
         <div class="contleft">
-        {% else %}
-        <div class="contright">
-        {% endif %}
-            <img class="avatar" src="{{ message.owner.avatar.url }}" alt="Avatar">
-            <div class="text-left">
+        <img class="avatar" src="{{ message.owner.avatar.url }}" alt="Avatar">
+            <div>
                 <p>{{ message.message }}</p>
-                <span class="time-right">{{ message.datetime }}</span>
+                <span class="time-right smallfont">{{ message.datetime }}</span>
             </div>
         </div>
+        {% else %}
+        <div class="contright">
+        <img class="avatar" src="{{ message.owner.avatar.url }}" alt="Avatar">
+            <div>
+                <p>{{ message.message }}</p>
+                <span class="time-right smallfont">{{ message.datetime }}</span>
+            </div>
+        </div>
+        {% endif %}
     {% endfor %}
     <div id="bottom"></div>
     </div>
       <div class="chat-form">
         <div class="contleft">
-        <form action="{% url 'chat_service:chat' chat_id=chat.id %}" method="post">
+        <form class="sendline" action="{% url 'chat_service:chat' chat_id=chat.id %}" method="post">
         {% csrf_token %}
             <input name="chat_id" type="hidden" value="{{ chat.id }}">
             <input name="owner_id" type="hidden" value="{{ user.id }}">
+
             {{ form.message}}
             <button class="btnsend" type="submit">
                 <img class="send" src="{% static 'mindfinder/send_icon.png' %}" alt="Avatar">
             </button>
+
         </form>
         </div>
       </div>
