--- a/chat_service/templates/chat_service/new.html
+++ b/chat_service/templates/chat_service/new.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="cent">
-    <h1>Выберите подходящего собеседника</h1>
+    <h1 class="header">Выберите подходящего собеседника</h1>
     <ul class="scroll">
     {% for profile in profiles %}
         <li>
