--- a/user_service/templates/user_service/signup.html
+++ b/user_service/templates/user_service/signup.html
@@ -22,6 +22,9 @@
           </div>
           
           <div class="cent">
+            {% if error %}
+              <p class="error smallfont">{{ error }}</p>
+            {% endif %}
             <button type="submit" class="btnfulled">Создать</button>
             <a href="{% url 'user_service:signin' %}" class="btnempty">Вход</a>
           </div>
